# actix-websocket-chat-app

./: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/components/messages/: InfoMessage.svelte  MsgContainer.svelte  MsgInput.svelte  MsgWrapper.svelte  UserMessage.svelte
frontend/src/lib/components/rooms/: NewRoomMenu.svelte  RoomItem.svelte  Rooms.svelte
frontend/src/lib/helper/: connect.ts  cookie.ts
frontend/src/lib/types/: index.ts  messages.ts
frontend/src/routes/: +page.svelte  styles.css
frontend/src/routes/room/[id]/: +page.server.ts  +page.svelte
src/: client.rs  lobby.rs  main.rs  messages.rs
static/: app.js  index.html
